# integralsOpenMP

./: CMakeLists.txt  main.cpp  messaging.cpp  messaging.h  types.h
functions/: arcsin.cpp  arcsin.h  exp.cpp  exp.h  heaviside_step.cpp  heaviside_step.h
report/: report.tex
results/fullopt/: 100k.txt  10k.txt  1M.txt  1k.txt
results/gcc_c/: 100k.txt
results/noopt/: 100k.txt  10k.txt  1M.txt  1k.txt
results/prepopt/: 100k.txt  10k.txt  1M.txt  1k.txt
results/tests/100k/: noopt.txt  opt.txt
results/tests/10k/: noopt.txt  opt.txt
results/tests/1M/: noopt.txt  opt.txt
results/tests/1k/: noopt.txt  opt.txt
